--- a/index.html
+++ b/index.html
@@ -7,18 +7,90 @@
   <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  <div class="trade-card">
-    <h1>Trades</h1>
-    <div class="trade-list" id="trades"></div>
+  <div id="app"></div>
+<!--
+  <div class="flex">
+    <div class="trade-card">
+      <h1>Trades</h1>
+      <div class="trade-list" id="trades"></div>
+    </div>
+    <div class="orders">
+      <h1>Orders</h1>
+      <div class="order-list" id="orders"></div>
+    </div>
+    <div id="order-book" class="book"></div>
   </div>
+
+
+
+ -->
+  <div id="form-outlet"></div>
+
+  <script id="orders-list" type="text/handlebar">
+    <table>
+      <thead>
+        <th>ID</th>
+        <th>Side</th>
+        <th>Price</th>
+        <th>Quantity</th>
+        <th>Remaining Quantity</th>
+      </thead>
+      <tbody>
+        {{#each orders}}
+        <tr>
+          <td>{{this.id}}</td>
+          <td>{{this.side}}</td>
+          <td>{{this.price}}</td>
+          <td>{{this.quantity}}</td>
+          <td>{{this.remaining_quantity}}</td>
+        </tr>
+        {{/each}}
+      </tbody>
+    </table>
+  </script>
+
+  <script id="orderbook-view" type="text/handlebar">
+    <div class="flex">
+      <table class="orderbook-side">
+        <thead>
+          <th>Price</th>
+          <th>Quantity</th>
+        </thead>
+        <tbody>
+          {{#each buy}}
+          <tr>
+            <td>{{this.price}}</td>
+            <td>{{this.quantity}}</td>
+          </tr>
+          {{/each}}
+        </tbody>
+      </table>
+      <table class="orderbook-side">
+        <thead>
+          <th>Price</th>
+          <th>Quantity</th>
+        </thead>
+        <tbody>
+          {{#each sell}}
+          <tr>
+            <td>{{this.price}}</td>
+            <td>{{this.quantity}}</td>
+          </tr>
+          {{/each}}
+        </tbody>
+      </table>
+    </div>
+  </script>
+
+
   <script id="order-form" type="text/handlebar">
     <form>
       <label for="price-input">Price</label>
-      <input oninput="this.value=(parseInt(this.value))" id="price-input" name="price" type="number">
+      <input oninput="this.value=(parseInt(this.value))" required id="price-input" name="price" type="number">
       €
       <br>
       <label for="quantity-input">Quantity</label>
-      <input oninput="this.value=(parseInt(this.value))"  id="quantity-input" name="quantity" type="number">
+      <input oninput="this.value=(parseInt(this.value))" required min="1" id="quantity-input" name="quantity" type="number">
       <br>
       <label for="side-input">Side</label>
       <select id="side-input" name="side">
